--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
   - npm i g -npm && npm install && npm run build
   - ln -s ${TRAVIS_BUILD_DIR} ~/${APPLICATION}/plugins/themes/classic
   # Install OJS & prep data environment
-  - $(npm bin)/cypress run --spec "cypress/tests/data/*.spec.js,cypress/tests/data/60-content/*.spec.js"
+  - $(npm bin)/cypress run --spec "cypress/tests/data/*.spec.js,cypress/tests/data/60-content/VkarbasizaedSubmission.spec.js"
 
 script:
   - $(npm bin)/cypress run --config integrationFolder=plugins/themes/classic/cypress/tests/functional
